slideshow fix on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -167,7 +167,7 @@ video {
 }
 
 .blur {
-    filter: blur(6px) brightness(0.4);
+    filter: brightness(0.4);
     //pointer-events: none;
     z-index: -1;
 }
@@ -318,7 +318,7 @@ video {
     user-select: none;
 
     &:hover {
-        opacity: 0.3;
+        opacity: 0.8;
         background: none;
         color: white;
     }
@@ -789,7 +789,7 @@ strong {
     display: flex;
     align-items: center;
     justify-content: center;
-    background:#101010;
+    background:linear-gradient(#101010, black);
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -1406,5 +1406,16 @@ a {
         top: 0px;
         right: 0px;
         margin: 24px;
+    }
+
+    .slideshow {
+        //background: blue;
+        transition: 500ms;
+    
+        .background-screengrab {
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
     }
 }
